<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".ImpostazioniActivity">


    <TextView
        android:id="@+id/lblInfoOra_Impostazioni"
        android:layout_width="315dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/lblInfoOra_Impostazioni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutQualeAndamento_Impostazioni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblInfoOra_Impostazioni">

        <TextView
            android:id="@+id/lblInfoNazReg_Impostazioni"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/lblInfoNazreg_Impostazioni" />

        <RadioGroup
            android:id="@+id/rdGroupNazReg_Impostazioni"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <RadioButton
                android:id="@+id/rdBtnNazionale_Impostazioni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rdBtnNazionale_Impostazioni" />

            <RadioButton
                android:id="@+id/rdBtnRegionale_Impostazioni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rdBtnRegionale_Impostazioni" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutQualeAndamento_Impostazioni">

        <TextView
            android:id="@+id/lblInfoSpiegazione_Impostazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lblInfoSpiegazioni_Impostazioni" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblInfoQtaNaz_Impostazioni"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lblInfoQtaNaz_Impostazioni" />

            <Spinner
                android:id="@+id/spnQtaNaz_Impostazioni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="left|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblInfoQtaReg_Impostazioni"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lblInfoQtaReg_Impostazioni" />

            <Spinner
                android:id="@+id/spnQtaReg_Impostazioni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="left|center_vertical" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnTornaIndietro_Impostazioni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTornaIndietro_Impostazioni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layoutContactMe_Impostazioni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnTornaIndietro_Impostazioni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lblInfo1_Impostazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lblInfoEmail_Impostazioni" />

        <TextView
            android:id="@+id/lblEmail_di_contatto_Impostazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:text="@string/lblEmail_di_contatto"
            android:textColor="#2196F3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblInfo2_Impostazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/lblInfoGitHub_Impostazioni" />

        <TextView
            android:id="@+id/lblUrl_accountGitHub_Impostazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lblUrl_accountGitHub"
            android:textColor="#2196F3"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>