<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context=".LicenzaActivity">

    <TextView
        android:id="@+id/lblLicenza_Licenza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblLicenza_Licenza" />

    <TextView
        android:id="@+id/lblUrlRepGitHub_Licenza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lblUrlRepGitHub_Licenza"
        android:textColor="#2828CC" />

    <TextView
        android:id="@+id/lblLicenza2_Licenza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblLicenza2_Licenza" />

    <TextView
        android:id="@+id/lblUrlLicenza_Licenza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lblUrlLicenza_Licenza"
        android:textColor="#2828CC"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTornaIndietro_Licenza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnTornaIndietro_Licenza"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>